WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175914
DeleteSelectionCommand should be robust when starting and ending editable positions cannot be found
https://bugs.webkit.org/show_bug.cgi?id=175914
Summary
DeleteSelectionCommand should be robust when starting and ending editable pos...
Wenson Hsieh
Reported
2017-08-23 17:01:06 PDT
<
rdar://problem/29792688
>
Attachments
Patch
(6.05 KB, patch)
2017-08-23 17:25 PDT
,
Wenson Hsieh
rniwa
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(6.04 KB, patch)
2017-08-23 19:41 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews117 for mac-elcapitan
(3.48 MB, application/zip)
2017-08-23 20:04 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-08-23 17:25:40 PDT
Created
attachment 318946
[details]
Patch
Wenson Hsieh
Comment 2
2017-08-23 19:41:20 PDT
Created
attachment 318960
[details]
Patch for landing
Build Bot
Comment 3
2017-08-23 20:04:16 PDT
Comment on
attachment 318946
[details]
Patch
Attachment 318946
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/4372279
New failing tests: editing/execCommand/forward-delete-read-write-canvas.html
Build Bot
Comment 4
2017-08-23 20:04:17 PDT
Created
attachment 318961
[details]
Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Wenson Hsieh
Comment 5
2017-08-23 20:18:02 PDT
Hm, looks like the first version of the new LayoutTest hits a debug assertion. This happens without my fix as well, and looks like a separate issue than the bug I'm addressing here. Filed
https://bugs.webkit.org/show_bug.cgi?id=175923
to track it.
WebKit Commit Bot
Comment 6
2017-08-23 21:12:58 PDT
Comment on
attachment 318960
[details]
Patch for landing Clearing flags on attachment: 318960 Committed
r221128
: <
http://trac.webkit.org/changeset/221128
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug